Views e controllers: Quem-Somos/Parceiros implementadas

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "lodash": "^4.17.4"
     },
     "dependencies": {
-        "bulma": "^0.7.1"
+        "bulma": "^0.7.1",
+        "bulma-extensions": "^2.2.1"
     }
 }
