--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,6 @@ APP_URL=http://proteca.ufpr.br/
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=
+DB_DATABASE=proteca
 DB_USERNAME=root
 DB_PASSWORD=root
